--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/model-viewer": "^3.4.0",
+    "@react-three/drei": "^9.105.2",
+    "@react-three/fiber": "^8.16.1",
     "framer-motion": "^10.16.4",
+    "gltf-loader": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
